# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[package]
name = "spongemock"
version = "0.1.0"
authors = ["Tanja <git@tanja.pw>"]
edition = "2018"

license = "AGPL-3.0-or-later"
repository = "https://github.com/Tanja-4732/spongemock"
homepage = "https://github.com/Tanja-4732/spongemock#readme"
readme = "README.md"
documentation = "https://docs.rs/spongemock"
description = "A library and CLI-tool for random text capitalization"
include = ["/README.md", "/LICENSE.md", "/Cargo.toml", "/Cargo.lock", "/src"]


[lib]
name = "spongemock"
path = "src/lib.rs"

[[bin]]
name = "sm"
path = "src/app/main.rs"


# TODO Split dependencies of the library and the CLI app into separate lists, once cargo #1982 is ready
[dependencies]
clap = "2.33.3"
rand = "0.8.3"
anyhow = "1.0.40"
